// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`r-modal.vue should render Wrapper and match snapshot 1`] = `
<div tabindex="0" role="dialog" name="modal">
  <div class="r-modal-overlay">
    <r-loader-stub show="true" loading="true" fullscreen="true" class="r-modal-loader is-loading"></r-loader-stub>
  </div>
</div>
`;

exports[`r-modal.vue should render via SSR and match snapshot 1`] = `
<div tabindex="0" role="dialog" name="modal">
  <div class="r-modal-overlay">
    <div class="r-component r-loader r-modal-loader is-loading r-loader--loading r-loader--fullscreen">
      <div class="r-loader-wrapper">
        <div class="r-mr-re"></div>
        <div class="r-mr-bil"></div>
        <div class="r-mr-ly"></div>
      </div>
    </div>
  </div>
</div>
`;
